--- a/.hassio-addons.yml
+++ b/.hassio-addons.yml
@@ -98,7 +98,7 @@ addons:
     target: matrix
     image: hassioaddons/matrix-{arch}
   mopidy:
-    repository: hassio-addons/addon-mopidy
+    repository: rahul-r/addon-mopidy
     target: mopidy
     image: hassioaddons/mopidy-{arch}
   motioneye:
@@ -136,7 +136,7 @@ addons:
   prometheus:
     repository: hassio-addons/addon-prometheus
     target: prometheus
-    image: hassioaddons/prometheus-{arch}       
+    image: hassioaddons/prometheus-{arch}
   portainer:
     repository: hassio-addons/addon-portainer
     target: portainer
